2.4.0
 - FN-10331 Complete rewrite of custom Comfino payment statuses management.
 - FN-10331 Update notifications endpoint - improve processing input message signature (accepted hash algorithm restrictions based on hosted PHP version).
 - FN-10331 Simplify Comfino states to internal PS states mapping to avoid sending of redundant e-mails.
 - FN-10331 Add some logic for development mode.
 - FN-10331 Remove config directory and add .htaccess file in the docs directory.
 - FN-10331 Add missing index file in the docs directory.

2.3.2
 - FN-10421 Fix bug in LoggerError.
 - FN-10421 Improve errors logging.
 - FN-10421 Filter all E_USER_ and NOTICE errors - ignore them in logger.
 - FN-10421 Improve errors handling in order creation process.
 - FN-10421 Improve phone number extraction from order details.

2.3.1
 - FN-10401 Fixed bug in frontend initialization in case of using untypical PS templates.
 - Prevent losing of application state (loaded offers list) in case of some dynamically loaded PS templates.

2.3.0
 - FN-10362 Remove SHA3 library (PHP implementation), update notifications endpoint (new headers for hashing algorithms management - better compatibility with PHP older than 7.1), modifications for improving local development, update frontend logic for paywall rendering (better detection of Comfino control container in untypical PS frontend templates).

2.2.4
 - FN-10290 Add a new helper class Tools, remove incompatibilities with PrestaShop 1.6, fix bugs with Tools::displayPrice() usage.

2.2.3
 - FN-9991 Remove deprecated Tools::displayPrice() calls.

2.2.2
 - FN-9865 Update styles to avoid conflicts with some PrestaShop frontend themes.

2.2.1
 - FN-9566 Fix bug in frontend initialization code present in some PS frontend themes.
 - FN-9832 Bug fixes and code clean up.
 - FN-9844 Code clean up, update to the latest PrestaShop coding standards.
 - FN-9849 Add external dependency - library with SHA3 PHP implementation, update notification endpoint.

2.2.0