@@ -6,7 +6,7 @@
 
 **Merged pull requests:**
 
-- FN-10331 Complete rewrite of custom Comfino payment statuses management. Update notifications endpoint - improve processing input message signature (accepted hash algorithm restrictions based on hosted PHP version). Simplify Comfino states to internal PS states mapping to avoid sending of redundant e-mails. Add some logic for development mode. Remove config directory and add .htaccess file in the docs directory. Add missing index file in the docs directory. [\#66](https://github.com/comfino/PrestaShop/pull/66) ([akozubskicr](https://github.com/akozubskicr))
+- FN-10331 Complete rewrite of plugin configuration management and install/uninstall logic. Complete rewrite of custom Comfino payment statuses management. Update notifications endpoint - improve processing input message signature (accepted hash algorithm restrictions based on hosted PHP version). Simplify Comfino states to internal PS states mapping to avoid sending of redundant e-mails. Add some logic for development mode. Remove config directory and add .htaccess file in the docs directory. Add missing index file in the docs directory. [\#66](https://github.com/comfino/PrestaShop/pull/66) ([akozubskicr](https://github.com/akozubskicr))
 
 ## [2.3.2](https://github.com/comfino/PrestaShop/tree/2.3.2) (2023-04-17)
 
