@@ -1,4 +1,5 @@
 2.4.0
+ - FN-10331 Complete rewrite of plugin configuration management and install/uninstall logic.
  - FN-10331 Complete rewrite of custom Comfino payment statuses management.
  - FN-10331 Update notifications endpoint - improve processing input message signature (accepted hash algorithm restrictions based on hosted PHP version).
  - FN-10331 Simplify Comfino states to internal PS states mapping to avoid sending of redundant e-mails.
